// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`caracterización del pipeline con proveedores sintéticos > menos paradas, SOC 90 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 43.2,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 22,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 43.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 43.6,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 21.8,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 43.6,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 40.6,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 23.3,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 40.6,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 146,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 37.3,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 24.8,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 37.3,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 151,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > menos paradas, SOC 90 % 2`] = `"7a121112c5870f75"`;

exports[`caracterización del pipeline con proveedores sintéticos > modo más rápido, SOC 35 %: resumen y huella del resultado completo 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 18.9,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 21.3,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 18.9,
      "noTolls": undefined,
      "stops": [
        "s20 32.3→61.5 19 min",
      ],
      "totalMinutes": 168,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 17.5,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 17.5,
      "noTolls": undefined,
      "stops": [
        "s20 33.6→59.5 17 min",
      ],
      "totalMinutes": 160,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -10.6,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 21.5,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 35,
      "label": "Ruta C",
      "minSoc": -10.6,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -14.1,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 23.1,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 35,
      "label": "Ruta D",
      "minSoc": -14.1,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > modo más rápido, SOC 35 %: resumen y huella del resultado completo 2`] = `"436f924a378a5631"`;

exports[`caracterización del pipeline con proveedores sintéticos > más segura, SOC 15 %, margen conservador (pide carga antes de salir) 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 29.9,
      "departureCharge": 8,
      "distanceKm": 129.1,
      "energyKwh": 21.3,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 23,
      "label": "Ruta A",
      "minSoc": 20.3,
      "noTolls": undefined,
      "stops": [
        "s20 20.3→72.5 30 min",
      ],
      "totalMinutes": 179,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 28.5,
      "departureCharge": 7,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 22,
      "label": "Ruta B",
      "minSoc": 20.6,
      "noTolls": undefined,
      "stops": [
        "s20 20.6→70.5 29 min",
      ],
      "totalMinutes": 172,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -30.6,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 21.5,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 15,
      "label": "Ruta C",
      "minSoc": -30.6,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -34.1,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 23.1,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 15,
      "label": "Ruta D",
      "minSoc": -34.1,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > más segura, SOC 15 %, margen conservador (pide carga antes de salir) 2`] = `"bf52626369f4844f"`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: menos paradas, SOC 90 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 43.2,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 22,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 43.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 43.6,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 21.8,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 43.6,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 40.6,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 23.3,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 40.6,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 146,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 37.3,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 24.8,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 37.3,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 151,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: modo más rápido, SOC 35 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 15.5,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 21.3,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 15.5,
      "noTolls": undefined,
      "stops": [
        "s20 32.3→58 17 min",
      ],
      "totalMinutes": 167,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 16,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 16,
      "noTolls": undefined,
      "stops": [
        "s20 33.6→58 16 min",
      ],
      "totalMinutes": 160,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 15.4,
      "departureCharge": 26,
      "distanceKm": 144,
      "energyKwh": 21.5,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 61,
      "label": "Ruta C",
      "minSoc": 15.4,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 15.9,
      "departureCharge": 30,
      "distanceKm": 149.4,
      "energyKwh": 23.1,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 65,
      "label": "Ruta D",
      "minSoc": 15.9,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: más segura, SOC 15 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 20.5,
      "departureCharge": 8,
      "distanceKm": 129.1,
      "energyKwh": 21.3,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 23,
      "label": "Ruta A",
      "minSoc": 20.3,
      "noTolls": undefined,
      "stops": [
        "s20 20.3→63 25 min",
      ],
      "totalMinutes": 175,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 21,
      "departureCharge": 7,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 22,
      "label": "Ruta B",
      "minSoc": 20.6,
      "noTolls": undefined,
      "stops": [
        "s20 20.6→63 25 min",
      ],
      "totalMinutes": 168,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 20.9,
      "departureCharge": 55,
      "distanceKm": 149.4,
      "energyKwh": 23.1,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 70,
      "label": "Ruta D",
      "minSoc": 20.9,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
    {
      "arrivalSoc": 20.4,
      "departureCharge": 51,
      "distanceKm": 144,
      "energyKwh": 21.5,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 66,
      "label": "Ruta C",
      "minSoc": 20.4,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;
